--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,9 @@
     <depend>nav_msgs</depend>
     <depend>sensor_msgs</depend>
     <depend>yaml-cpp</depend>
+    <depend>tf2_geometry_msgs</depend>
+    <depend>tf2_ros</depend>
+    <depend>tf2</depend>
 
     <export>
         <build_type>ament_cmake</build_type>
